Update workflow to allow for Postgress shared DB

--- a/.env
+++ b/.env
@@ -1,14 +1,34 @@
+# Postrgres
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_IMAGE_VERSION=14
+POSTGRES_LOCAL_PORT=5432
+
 # JuiceFS Config
 WORKING_DIR=$(pwd)
 JUICE_LOCAL_NAME='cachedir'
 JUICE_LOCAL_PATH=${WORKING_DIR}/${JUICE_LOCAL_NAME}
+JUICE_POSTGRES_DB="juicefs"
+
+
+## SQlite 
+# JUICE_CONNECTION_URL="sqlite3://${JUICE_LOCAL_NAME}.db"
+## Postgres
+JUICE_CONNECTION_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${JUICE_POSTGRES_DB}?sslmode=disable"
 
 # Prefect Config
+PREFECT_API_URL=http://127.0.0.1:4200/api
 PREFECT_LOCAL_STORAGE_PATH=${JUICE_LOCAL_PATH}
 PREFECT_MEMO_STORE_PATH="${JUICE_LOCAL_PATH}/memo_store.toml"
 PREFECT_MEMOIZE_BLOCK_AUTO_REGISTRATION=True
 PREFECT_TASKS_REFRESH_CACHE=False
-PREFECT_ORION_DATABASE_CONNECTION_URL="sqlite+aiosqlite:///${PREFECT_LOCAL_STORAGE_PATH}/orion.db"
+
+## SQlite 
+# PREFECT_ORION_DATABASE_CONNECTION_URL="sqlite+aiosqlite:///${PREFECT_LOCAL_STORAGE_PATH}/orion.db"
+## Postgres
+PREFECT_POSTGRES_DB="prefect"
+DOCKER_INTERNAL_CONNECTION_URL="postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${PREFECT_POSTGRES_DB}?async_fallback=true"
+PREFECT_ORION_DATABASE_CONNECTION_URL="postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${PREFECT_POSTGRES_DB}?async_fallback=true"
 
 # Boilerplate
 export JUICE_LOCAL_NAME=$JUICE_LOCAL_NAME
@@ -17,4 +37,4 @@ export PREFECT_LOCAL_STORAGE_PATH=$PREFECT_LOCAL_STORAGE_PATH
 export PREFECT_MEMO_STORE_PATH=$PREFECT_MEMO_STORE_PATH
 export PREFECT_TASKS_REFRESH_CACHE=$PREFECT_TASKS_REFRESH_CACHE 
 export PREFECT_ORION_DATABASE_CONNECTION_URL
-mkdir -p $PREFECT_LOCAL_STORAGE_PATH
+# mkdir -p $PREFECT_LOCAL_STORAGE_PATH
